Fix hierarchy nav menu text alignment

--- a/src/documents/styles/components/hierarchy-nav.less
+++ b/src/documents/styles/components/hierarchy-nav.less
@@ -53,9 +53,6 @@
 .dropdown-container {
   display:inline-block;
   .dropdown-menu {
-    & li {
-      padding-right:20px;
-    }
     font-family: 'Open Sans', sans-serif;
     font-weight:400;
     font-size: 16px;
@@ -140,6 +137,10 @@
       }
     }
   }
+}
+
+#nav-list {
+  text-align: left;
 }
 
 //
